Add a generic site layout

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,56 +1,32 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="language" content="es" />
-<title>3.126 € - ¿Se ganan su sueldo nuestros diputados?</title>
-<meta name="description" content="3.126 euros muestra con datos, gráficos y números los movimientos que se realizan en el Congreso."/>
-<meta name="keywords" content="Congreso de los Diputados, Congreso, Senado, Parlamento, parlamentarios, ley, constitución, ministros, diputados, hemiciclo, España, presidente del gobierno, legislatura, democracia" />
-<link href="/css/styles.css" rel="stylesheet" type="text/css" />
-<link href="/css/reset.css" rel="stylesheet" type="text/css" />
-<!--[if IE 6]>
-<script src="../js/DD_belatedPNG.js"></script>
-<script>
-    DD_belatedPNG.fix('.container');
-</script>
-<![endif]-->
-</head>
-<body>
+<div id="weekly">
+    <div class="container">
+      <ul class="deputy">
+        <li>
+          <strong><span>34</span> iniciativas</strong>
+          <img class="deputy_pic" src="/images/diputado01.jpg" alt="Diputado con más iniciativas" width="110" height="165" />
+          <p>Conde Roa, Gerardo Jesús</p>
+        </li>
+        <li>
+          <strong><span>0</span> iniciativas</strong>
+          <img class="deputy_pic" src="/images/diputado02.jpg" alt="Diputado con menos iniciativas" width="110" height="165" />
+          <p>Hermosín Bono, Carmen<br />y <span>5</span> diputados más</p>
+        </li>
+      </ul>
+    </div>
+</div> <!-- #weekly -->
  
-   
-    <div id="header">
-      <h1><a href="index.html" title="3.126 euros - Home">3.126 euros</a></h1>
-    </div> <!-- #header -->
-    
-    <div id="block">
-      <h2>Es el salario que cobra cada diputado de los 350 que hay.<br />¿Crees que se ganan su sueldo?</h2>
-      </div> <!-- #block -->
-    <div id="weekly">
-        <div class="container">
-          <ul id="deputy">
-            <li></li>
-            <li></li>
-          </ul>
-        </div>
-    </div> <!-- #weekly -->
-     
-    <div id="monthly">
-      <div class="container">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-      </div>
-    </div> <!-- #monthly -->
-    
-    <div id="legislature">
-      <div class="container">
-      </div>
-    </div> <!-- #legislature -->
- 
- 
+<div id="monthly">
+  <div class="container">
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+      Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+  </div>
+</div> <!-- #monthly -->
 
-</body>
-</html>
+<div id="legislature">
+  <div class="container">
+  </div>
+</div> <!-- #legislature -->
