--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     </div> <!-- #header -->
     
     <div id="block">
-      <h2>Es el salario que cobra cada diputado de los 350 que hay.<br />¿Crees que se ganan su sueldo?</h2>
+      <h2>Es el salario que cobra cada Diputado de los 350 que hay.<br />¿Crees que se ganan su sueldo?</h2>
     </div> <!-- #block -->
     
     <%= yield %>
