--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,11 +19,11 @@
  
    
     <div id="header">
-      <h1><a href="index.html" title="3.126 euros - Home">3.126 euros</a></h1>
+      <h1><a href="index.html" title="3.126 € - Home">3126euros.com</a></h1>
     </div> <!-- #header -->
     
     <div id="block">
-      <h2>Es el salario que cobra cada Diputado de los 350 que hay.<br />¿Crees que se ganan su sueldo?</h2>
+      <h2>Es el salario que cobra cada Diputado de los 350 que hay.<br /><strong>¿Crees que se ganan su sueldo?</strong></h2>
     </div> <!-- #block -->
     
     <%= yield %>
