--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <!--[if IE 6]>
 <script src="../js/DD_belatedPNG.js"></script>
 <script>
-    DD_belatedPNG.fix('.container');
+    DD_belatedPNG.fix('#step1, #step2, #step3');
 </script>
 <![endif]-->
 </head>
@@ -23,7 +23,7 @@
     </div> <!-- #header -->
     
     <div id="block">
-      <h2>Es el salario que cobra cada Diputado de los 350 que hay.<br /><strong>¿Crees que se ganan su sueldo?</strong></h2>
+      <h2>Es el salario mínimo que cobra cada Diputado de los 350 que hay.<br /><strong>¿Crees que se ganan su sueldo?</strong></h2>
     </div> <!-- #block -->
     
     <%= yield %>
