--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
  
    
     <div id="header">
-      <h1><a href="index.html" title="3.126 € - Home">3126euros.com</a></h1>
+      <h1><a href="/" title="3.126 € - Home">3126euros.com</a></h1>
     </div> <!-- #header -->
     
     <div id="block">
