--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,13 +18,32 @@ body {
 
 #header h1 a {
   color: white;
+  text-decoration: none;
 }
+
+#header h1 a:hover {text-decoration: underline;}
 
 #block h2 {
 	font-size: 30px;
 	font-family: "Arial Rounded MT Bold", "Trebuchet MS", Verdana, Arial, sans-serif;
 	line-height: 40px;
 	text-shadow: 0.3em 0.3em 1em gray ; 
+}
+
+#deputies_page h2 {
+	font-size: 30px;
+	font-family: "Arial Rounded MT Bold", "Trebuchet MS", Verdana, Arial, sans-serif;
+	line-height: 40px;
+	text-shadow: 0.3em 0.3em 1em gray;
+	color:#863e36;
+}
+
+#deputies_page {
+	margin: 0 auto;
+	padding: 35px 0;
+	text-align: center;
+	background: url('../images/shadow.png') no-repeat center top;
+	background-color: #e8e8ea;
 }
 
 #block {
@@ -55,6 +74,16 @@ body {
 	background: url('../images/bg_r.jpg') repeat-y center;
 }
 
+#step4 {
+	background: url('../images/bg_g.jpg') repeat-y center;	
+	
+}
+
+#step5 {
+	background: url('../images/bg_g.jpg') repeat-y center;	
+	
+}
+
 .container {
 	background: url('../images/shadow.png') no-repeat center top;
 	width: 900px;
@@ -68,7 +97,7 @@ body {
 
 .deputy {
 	font-family: Arial, Helvetica, Verdana, "Trebuchet MS", sans-serif;
-	background: url('../images/arrow1.png') no-repeat center center;
+	/*background: url('../images/scale2.png') no-repeat center center;*/
 	width: 650px;
 	margin: 0 auto;
 	color: #ffffff;
@@ -99,6 +128,7 @@ img.deputy_pic {
 	text-align: center;
 	font-size:120%;
 	display: block;
+	margin: 8px 0;
 }
 
 .deputy li strong span{
@@ -128,6 +158,7 @@ img.deputy_pic {
 	font-size:90%;
 	font-weight: normal;
 	line-height: 20px;
+	margin:8px 0;
 	}
 	
 .deputy li p span{
@@ -143,7 +174,7 @@ font-weight:bold;
 
 ul.team {
 	font-family: Arial, Helvetica, Verdana, "Trebuchet MS", sans-serif;
-	background: url('../images/scale.png') no-repeat center center;
+	/*background: url('../images/scale.png') no-repeat center center;*/
 	width: 406px;
 	float: left;
 	margin-top: 20px;
@@ -229,22 +260,30 @@ ul.total {
 	width: 500px;
 	margin: 0px auto;
 }
+
+ul.total p {
+	color: #ffffff;
+	text-align: center;
+	font-size: 40px;
+}
 ul.total li {
-	padding: 25px 0 50px 130px;
+	padding: 25px 0 35px 130px;
 }
 
 ul.total li#initiatives {
 	background: url('../images/doc.png') no-repeat left;
+	/*text-align: center;*/
 }
 
 ul.total li#deputies {
 	background: url('../images/user.png') no-repeat left;
+	/*text-align: center;*/
 }
 
 ul.total strong {
 	color: #ffffff;
 	font-family: Arial, Helvetica, Verdana, "Trebuchet MS", sans-serif;
-	font-size: 127%;
+	font-size: 143%;
 	display: inline;
 }
 
@@ -254,5 +293,41 @@ ul.total strong span{
 	font-size: 350%;
 	margin-right: 10px;
 }
+
+
+/*Ranking de Diputados*/
+
+
+#ranking {
+	width: 800px;
+    margin: 0 auto;
+	color: #ffffff;
+	margin: 20px auto 0px;
+	padding-top: 20px;
+	font-family: Arial, Helvetica, Verdana, "Trebuchet MS", sans-serif;
+}
+
+table#ranking tr {
+	margin: 5px 0;
+}
+
+#ranking  img.pic{
+	margin: 0px 7px;
+}
+
+
+#ranking span {
+	font-size: 55px;
+	margin: 8px 15px 8px 0;
+	font-weight: bold;
+}
+
+#ranking strong {
+	font-size: 26px;
+	margin: 8px 15px 8px 0;
+}
+
+
+
 
 
