--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,7 @@
+<div id="block">
+  <h2>Es el salario mínimo que cobra cada Diputado de los 350 que hay.<br /><strong>¿Crees que se ganan su sueldo?</strong></h2>
+</div> <!-- #block -->
+
 <div id="step1">
     <div class="container">
       <h3>Iniciativas por Diputados</h3>
