--- a/app/views/deputies/index.html.erb
+++ b/app/views/deputies/index.html.erb
@@ -1,30 +1,36 @@
-<div id="deputies_page"><h2>Ranking de Diputados que más iniciativas aportan</h2></div>
+<div id="block">
+  <h2>Ranking de Diputados que más iniciativas aportan</h2>
+</div> <!-- #block -->
 
 <div id="step5">
     
   
   <table id="ranking"> 
-  <tr> 
-  <td><span>34567</span></td> 
-  <td><img class="pic" alt="92_9" height="132" src="http://www.congreso.es/wc/htdocs/web/img/diputados/92_9.jpg" width="88" /></td> 
-  <td><strong>Cortés Martín, Miguel Ángel</strong></td> 
-  <td><img src="/images/minilogo.jpg" alt="Logo" height="40" /></td>
-  </tr> 
-  <tr> 
-  <td><span>34567</span></td> 
-  <td><img class="pic" alt="92_9" height="132" src="http://www.congreso.es/wc/htdocs/web/img/diputados/92_9.jpg" width="88" /></td>
-  <td><strong>Merino López, Rafael</strong></td> 
-  <td><img src="/images/minilogo.jpg" alt="Logo" height="40" /></td> 
-  </tr> 
+    <thead>
+      <tr>
+        <th>Nº iniciativas</th>
+        <th colspan="2">Nombre</th>
+        <th>Partido Político</th>
+      </tr>
+    </thead>
+<tbody>
+  
+    <% @deputies.each do |deputy| %>
+    <tr> 
+    <td><span><%= deputy.initiatives_count %></span></td> 
+    <td><%= image_tag deputy.photo_url, :height => 50 %></td> 
+    <td class="name"><%= deputy.name %>
+      <br />
+      <a href="" title="Ver iniciativas presentadas">Iniciativas presentadas</a>, <a href="" title="Ver intervenciones realizadas">Intervenciones realizadas</a>
+      
+    </td> 
+    <td><%= image_tag deputy.political_party.logo_url, :height => 40  %></td>
+    </tr> 
+    <% end %>
+  </tbody>
   </table>  <!-- #ranking -->
 
   
-  <% @deputies.each do |deputy| %>
-  <li>
-  <%= image_tag deputy.photo_url, :size => '20x30' %>
-  <%= deputy.name %>
-  </li>
-  <% end %>
 
 
 </div> <!-- #step5 -->
